Resolving minor bug where company logo overlaped next column (#56)
* Resolving minor bug where company logo overlaped next column

* Minor style edit

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -19,3 +19,9 @@
     text-decoration: none;
   }
 }
+
+.company-logo {
+  max-height: 100%;
+  max-width: 100%;
+  opacity: 1;
+}
